# K-Line

./: .env.example  .gitignore  .备忘  DEPLOY.md  LICENSE  PROJECT_ANALYSIS.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  RUN.md  SETUP.md  debug_ma_strategy.py  debug_strategy_init.py  debug_strategy_params.py  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py  verify_backend_params.py
.github/: copilot-instructions.md
backend/: FIX_LOGIN.md  __init__.py  chip_distribution_demo.py  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py  aggregation_schemes.py  auth.py  batch_analysis.py  (+11 more)
backend/scripts/: entrypoint.sh  init_db.py  migrate_add_code_field.py  migrate_custom_strategy.py
data/: china_holidays.json
deploy/: backend.Dockerfile  frontend.Dockerfile  nginx.conf  nginx.conf.template
docs/: DATA_FETCH_STRATEGY.md  WEBUI_ADVANCED_FEATURES.md
frontend/: .env.example  README.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
scripts/: analyze_strategy.py  demo_strategy.py  export_data.py  fetch_data.py  plot_kline.py  run_strategy.py  setup.py
src/config/: settings.py
src/data_fetcher/: fetcher.py  stock_list.py
src/data_storage/: postgres_storage.py  sqlite_storage.py
src/strategy/: base.py  optimization.py  progress_manager.py  statistics.py
src/utils/: akshare_config.py  date_utils.py  logger.py
src/visualization/: kline.py
tests/: test_new_strategies.py  test_optimization.py  test_storage_params.py
(+79 files in other folders)
