[project]
name = "k-line"
version = "0.1.0"
description = "中国股市每日股票数据获取和存储系统，支持策略分析和可视化"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # 核心依赖
    "akshare>=1.12.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "bokeh>=3.0.0",
    "python-dotenv>=1.0.0",
    # 后端依赖
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "APScheduler>=3.10.0",
    "email-validator>=2.0.0",
    "aiosmtplib>=2.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.4.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".mypy_cache",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
